--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"@tanstack/svelte-query": "^5.71.10",
 		"@trpc/client": "^11.0.2",
 		"@trpc/server": "^11.0.2",
+		"@upstash/ratelimit": "^2.0.5",
+		"@upstash/redis": "^1.34.7",
 		"arctic": "^3.6.0",
 		"devalue": "^5.1.1",
 		"dotenv": "^16.4.7",
