--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
   "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "foodnotes",
+  "name": "e7-template",
   "compatibility_date": "2025-02-14",
   "pages_build_output_dir": ".svelte-kit/cloudflare",
   "observability": {
